# PocoProjects

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt  main.cpp
Cryptography/: Cryptography.cpp  Cryptography.h
DataTime/: Timer.cpp  Timer.h
Environment/: Environment.cpp  Environment.h
Foundation/: Events.cpp  Events.h
MultiThreading/: MultiThreading.cpp  MultiThreading.h
Networking/: Networking.cpp  Networking.h  WebSockets.cpp  WebSockets.h
Processes/: Processes.cpp  Processes.h
Random/: Random.cpp  Random.h
